# tailjlogs

./: CHANGELOG.md  README.md  pyproject.toml
docs/: blog_post.md
src/tailjlogs/: cli.py  help.py  log_lines.py  log_view.py  summary.py  ui.py
tests/: test_cli.py  test_copy_clipboard.py  test_footer_copy_mode.py  test_key_debug_and_bindings.py  test_log_lines.py  test_osc52.py
tests/fixtures/: test_data.jsonl
